<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<packaging>jar</packaging>

	<groupId>com.joraph</groupId>
	<artifactId>joraph</artifactId>
	<version>0.9-SNAPSHOT</version>

	<name>Joraph</name>
	<description>Java library for joining objects into a graph, JOin gRAPH</description>
	<url>https://github.com/briandilley/joraph</url>	

	<!-- 
     | settings used by this and child poms
     +-->
	<properties>

		<!-- build timestamps format -->
		<maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>

		<!-- jdk config -->
		<jdk.version>1.8</jdk.version>

	</properties>

	<!-- 
     | scm configuration
     +-->
	<scm>
		<connection>scm:git:git@github.com:briandilley/joraph.git</connection>
		<url>scm:git:git@github.com:briandilley/joraph.git</url>
		<developerConnection>scm:git:git@github.com:briandilley/joraph.git</developerConnection>
	</scm>

	<!-- 
     | continuous integration
     +-->
	<ciManagement>
		<system>Travis</system>
		<url>https://travis-ci.org/briandilley/joraph</url>
	</ciManagement>


	<build>

		<!-- resource directories -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>

		<plugins>

			<!-- compiler plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<testSource>${jdk.version}</testSource>
					<testTarget>${jdk.version}</testTarget>
				</configuration>
			</plugin>

			<!-- 
			 | Deploy sources too
			 +-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- 
			 | javadoc plugin
			 +-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
  							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- 
			 | site plugin
			 +-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<reportPlugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-project-info-reports-plugin</artifactId>
							<version>2.5.1</version>
							<reports>
								<report>index</report>
								<report>project-team</report>
								<report>license</report>
								<report>mailing-list</report>
								<report>dependencies</report>
								<report>dependency-convergence</report>
								<report>plugin-management</report>
								<report>cim</report>
								<report>issue-tracking</report>
								<report>scm</report>
								<report>summary</report>
							</reports>
						</plugin>
						<!-- <plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-changelog-plugin</artifactId>
							<version>2.2</version>
						</plugin> -->
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>taglist-maven-plugin</artifactId>
							<version>2.4</version>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-report-plugin</artifactId>
							<version>2.12.4</version>
							<configuration>
								<aggregate>true</aggregate>
								<linkXRef>true</linkXRef>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-javadoc-plugin</artifactId>
							<version>2.9</version>
						</plugin>
						<!--<plugin>
							<groupId>org.codehaus.mojo</groupId> 
							<artifactId>findbugs-maven-plugin</artifactId>
							<version>2.5.2</version>
							<configuration>
								<argLine>-Xmx256m</argLine>
								<argLine>-XX:MaxPermSize=256m</argLine>
							</configuration>
						</plugin> -->
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>jdepend-maven-plugin</artifactId>
							<version>2.0-beta-2</version>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-jxr-plugin</artifactId>
							<version>2.3</version>
						</plugin>
						<!--<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-pmd-plugin</artifactId>
							<version>2.7.1</version>
							<configuration>
								<linkXref>true</linkXref>
								<minimumTokens>100</minimumTokens>
								<minimumPriority>3</minimumPriority>
								<targetJdk>${jdk.version}</targetJdk>
							</configuration>
						</plugin> -->
						<!-- <plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>cobertura-maven-plugin</artifactId>
							<version>2.5.2</version>
							<configuration>
								<aggregate>true</aggregate>
								<formats>
									<format>html</format>
									<format>xml</format>
								</formats>
							</configuration>
						</plugin> -->
					</reportPlugins>
				</configuration>
			</plugin>
			
		</plugins>

	</build>



	<dependencies>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>1.3.RC2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>1.3.RC2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.9.5-rc1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
